data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_474.wast
;; 5. **Test Description**: Embed a sequence of `loop` instructions with increasing operand stack complexity, ensuring that each loop references the correct input and output types. Errors in handling these types can cause the loops to never exit.    **Constraint**: Type validation for multi-level loops and checking stack consistency.    **Infinite Loop Relevance**: Tests if complex stack manipulations do not result in infinite execution.

(assert_invalid
 (module
  (func (loop (result i32)
         (i32.const 1)
         (loop (param i32) (result i32)
           (loop (result i32)
             (local.get 0)
             (local.get 1)
             (i32.add)
             (br_if 1 (i32.const 0))
           )
           (i32.const 2)
           (br 0)
         )
         (i32.const 3)
         (br 0)
       )
     )
   )
 "type mismatch"
)